fixed versions in package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "7.0.0",
     "@nuxeo/nuxeo-web-ui-ftest": "file:./packages/nuxeo-web-ui-ftest",
-    "@nuxeo/testing-helpers": "~3.0.13-rc.0",
+    "@nuxeo/testing-helpers": "3.0.13-rc.0",
     "@open-wc/eslint-config": "0.3.0",
     "@open-wc/karma-esm": "2.13.21",
     "@open-wc/prettier-config": "0.1.0",
@@ -107,9 +107,9 @@
     "@material/mwc-snackbar": "0.21.0",
     "@nuxeo/chart-elements": "4.0.0-nx.1",
     "@nuxeo/moment": "2.24.0-nx.0",
-    "@nuxeo/nuxeo-dataviz-elements": "~3.0.13-rc.0",
-    "@nuxeo/nuxeo-elements": "~3.0.13-rc.0",
-    "@nuxeo/nuxeo-ui-elements": "~3.0.13-rc.0",
+    "@nuxeo/nuxeo-dataviz-elements": "3.0.13-rc.0",
+    "@nuxeo/nuxeo-elements": "3.0.13-rc.0",
+    "@nuxeo/nuxeo-ui-elements": "3.0.13-rc.0",
     "@nuxeo/page": "1.11.4-nx.0",
     "@polymer/app-layout": "3.0.0",
     "@polymer/iron-a11y-announcer": "3.0.0",
@@ -185,8 +185,8 @@
     "jsondiffpatch": "0.3.11",
     "jsplumb": "2.13.0",
     "nuxeo": "3.2.1",
-    "select2": "~3.5.1",
-    "three": "~0.125.0",
+    "select2": "3.5.1",
+    "three": "0.125.0",
     "uuid": "3.3.2",
     "web-animations-js": "2.3.1",
     "webdriverio": "7.2.0"
