--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "wdio-json-reporter": "2.0.0",
     "webpack": "5.3.0",
     "webpack-bundle-analyzer": "3.9.0",
-    "webpack-cli": "4.1.0",
-    "webpack-dev-server": "3.11.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
     "webpack-log": "3.0.1",
     "webpack-merge": "5.2.0",
     "workbox-cli": "3.6.3"
@@ -173,7 +173,7 @@
     "@polymer/paper-toggle-button": "3.0.0",
     "@polymer/paper-toolbar": "3.0.0",
     "@polymer/paper-tooltip": "3.0.0",
-    "@polymer/polymer": "3.0.0",
+    "@polymer/polymer": "3.3.1",
     "@wdio/allure-reporter": "7.2.0",
     "@webcomponents/html-imports": "1.2.0",
     "aws-sdk": "2.420.0",
