--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "wdio-json-reporter": "2.0.0",
     "webpack": "5.3.0",
     "webpack-bundle-analyzer": "3.9.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "3.11.3",
     "webpack-log": "3.0.1",
     "webpack-merge": "5.2.0",
     "workbox-cli": "3.6.3"
